# minillm

./: Cargo.toml  LICENSE  README.md
examples/: basic_generation.rs  interactive_chat.rs  tokenization.rs
src/: activations.rs  attention.rs  config.rs  generation.rs  gpt.rs  inference.rs  lib.rs  loader.rs  main.rs  mlp.rs  model.rs  tensor.rs  transformer.rs  transformers.rs  varbuilder.rs  weights.rs
