[package]
name = "minillm"
version = "0.1.0"
edition = "2024"
authors = ["BM Monjur Morshed"]
description = "A mini inference engine for running language models"
license = "MIT"
repository = "https://github.com/bmqube/minillm"
homepage = "https://github.com/bmqube/minillm"
documentation = "https://docs.rs/minillm"
readme = "README.md"
exclude = ["target/", ".git/", ".gitignore"]

[dependencies]
dotenv = "0.15.0"
hf-hub = "0.4.3"
serde = {version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = { version = "0.22.1", features = ["http"] }
